--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build",
+    "install-client": "npm install",
+    "heroku-postbuild": "num run install-client && npm run build",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
