--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7"
+  },
+  "engines": {
+    "node": "v12.16.3"
   }
 }
